prevent one-pixel ugly line at top of background strip on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ header {
 	padding: 50px 0 0;
 }
 .header-strip{
-	height: 50px; background: url(../images/bg-home.jpg) 0% 75%;
+	height: 50px; background: url(../images/bg-home.jpg) 0% 75.2%;
 }
 .brand { 
 	margin-bottom: 36px;
